libcxx
https://libcxx.llvm.org/BuildingLibcxx.html

build:
/local/git/llvm-project/build_all_libcxx$ git branch -a
  12.x
* 13.x

/local/git/llvm-project/build_all_libcxx$ git log
commit 9dc7d6d5e3261f2cb1ae746ddaaf2f4d4f1f5350 (HEAD -> 13.x, origin/release/13.x)

cmake -DCMAKE_BUILD_TYPE=Debug -DLLVM_ENABLE_PROJECTS="clang;lld;libcxx;libcxxabi;libunwind;compiler-rt" -DLLVM_PARALLEL_COMPILE_JOBS=4 -DLLVM_PARALLEL_LINK_JOBS=1 -G "Ninja" ../llvm

pass:

// /local/git/llvm-project/build_all_libcxx has built with libcxx and compiler-rt as above
/local/git/ex/c++/3$ /local/git/llvm-project/build_all_libcxx/bin/clang++ main.cpp -nostdinc++ -nostdlib++ -isystem /local/git/llvm-project/build_all_libcxx/include/c++/v1 -L /local/git/llvm-project/build_all_libcxx/lib -Wl,-rpath,/local/git/llvm-project/build_all_libcxx/lib -lc++ -v
/local/git/ex/c++/3$ ./a.out
id: 1
/local/git/ex/c++/3$ /local/git/llvm-project/build_all_libcxx/bin/clang++ main.cpp -stdlib=libc++ -v
"/usr/bin/ld" ... -lc++ -lm /local/git/llvm-project/build_all_libcxx/lib/clang/13.0.1/lib/linux/libclang_rt.builtins-x86_64.a -lc /local/git/llvm-project/build_all_libcxx/lib/clang/13.0.1/lib/linux/libclang_rt.builtins-x86_64.a /local/git/llvm-project/build_all_libcxx/lib/clang/13.0.1/lib/linux/clang_rt.crtend-x86_64.o /usr/lib/x86_64-linux-gnu/crtn.o

// /local/git/llvm-project/build has not build libcxx and compiler-rt
/local/git/ex/c++/3$ /local/git/llvm-project/build/bin/clang++ main.cpp -v
"/usr/bin/ld" ... -lstdc++ -lm -lgcc_s -lgcc -lc -lgcc_s -lgcc /usr/lib/gcc/x86_64-linux-gnu/7.5.0/crtend.o /usr/lib/x86_64-linux-gnu/crtn.o


ref. https://libcxx.llvm.org/UsingLibcxx.html#alternate-libcxx

fail:
/local/git/ex/c++/3$ /local/git/llvm-project/build_all_libcxx/bin/clang++ main.cpp -nostdinc++ -nostdlib++ -isystem /local/git/llvm-project/build_all_libcxx/include/c++/v1 -L /local/git/llvm-project/build_all_libcxx/lib -Wl,-rpath,/local/git/llvm-project/build_all_libcxx/lib -lc++ -target x86_64-unknown-unknown-elf -v
/local/git/llvm-project/build_all_libcxx/include/c++/v1/__config:1159:6: error: "No thread API"
#    error "No thread API"
/usr/include/wchar.h:27:10: fatal error: 'bits/libc-header-start.h' file not found
#include <bits/libc-header-start.h>
         ^~~~~~~~~~~~~~~~~~~~~~~~~~

